jpackage configuration for installers